--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -5,6 +5,10 @@ test_patterns = ["/tests/test_*py"]
 [[analyzers]]
 name = "python"
 enabled = true
+dependency_file_paths = [
+  "requirements.txt",
+  "test-requirements.txt"
+  ]
 
   [analyzers.meta]
   runtime_version = "3.x.x"
